--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,17 @@
+spring:
+  datasource:
+    url: jdbc:postgresql://localhost:5432/dooribun
+    username: postgres
+    password: 1111
+    driver-class-name: org.postgresql.Driver
 
+  jpa:
+    defer-datasource-initialization: true
+    hibernate.ddl-auto: validate
+    open-in-view: false
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        default_batch_fetch_size: 100
+    database: postgresql
