--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
 
   jpa:
     defer-datasource-initialization: true
-    hibernate.ddl-auto: validate
+    hibernate.ddl-auto: create
     open-in-view: false
     show-sql: true
     properties:
@@ -15,3 +15,15 @@ spring:
         format_sql: true
         default_batch_fetch_size: 100
     database: postgresql
+
+cloud:
+  aws:
+    credentials:
+      accessKey:
+      secretKey:
+    s3:
+      bucket: dooribun-bucket
+    region:
+      static: ap-northeast-2
+    stack:
+      auto: false
